# AnalizatorWydatkow

./: .gitignore  CMakeLists.txt  CSVreader.cpp  CSVreader.h  ExpenseManager.pro  README.md  expenses.csv  mainwindow.cpp  mainwindow.h
